# clinvar-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  container-release.json  mcp_server.py  pyproject.toml
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-security.yml  data-bundle.yml  docker.yml  publish-bundle.yml
clinvar_link/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py
clinvar_link/data/: __init__.py  indexes.sql  repository.py  review_status_stars.yaml  schema.sql
clinvar_link/ingest/: __init__.py  builder.py  bundle.py  cli.py  download_security.py  downloader.py  lock.py  parsing.py
clinvar_link/mcp/: __init__.py  annotations.py  clinvar_date_cache.py  errors.py  facade.py  freshness.py  log_filters.py  output_schemas.py  output_validation.py  params.py  prompts.py  resources.py  untrusted_content.py
clinvar_link/mcp/tools/: __init__.py  genes.py  metadata.py  variants.py
clinvar_link/models/: __init__.py  enums.py  gene_models.py  variant_models.py
clinvar_link/services/: __init__.py  citation.py  clinvar_service.py
data/: download_cache.json
docker/: Dockerfile  README.md  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: configuration.md  data.md  deployment.md  mcp-tool-catalog.md
docs/superpowers/plans/: 2026-06-16-clinvar-link.md  2026-06-17-clinvar-link-9plus-v2-track-a.md  2026-06-17-clinvar-link-9plus-v2-track-b.md  2026-06-17-clinvar-link-9plus.md
docs/superpowers/specs/: 2026-06-16-clinvar-link-design.md  2026-06-16-import-review.md  2026-06-17-clinvar-link-9plus-design.md  2026-06-17-clinvar-link-9plus-v2-design.md
tests/: _fixture_db.py  conftest.py  test_actionable_errors.py  test_builder.py  test_bundle.py  test_cli.py  test_config.py  test_dockerfile_bootstrap.py  test_e2e.py  test_filter_vocabularies.py  test_freshness.py  test_health_conformance.py  test_models.py  test_parsing.py  test_repository.py  test_resources.py  test_response_envelope_v1.py  test_schema.py  test_search_fallback.py  test_service.py  test_tool_contract.py  test_tool_names.py  test_tools_genes.py  test_tools_metadata.py  test_tools_variants.py
tests/conformance/: test_contract_truth_v1.py
tests/fixtures/: hgvs4variation_sample.txt  variant_summary_sample.txt
tests/unit/: test_diagnostics_no_pii.py  test_host_origin_guard.py  test_readme_tools.py  test_version_single_source.py
tests/unit/mcp/: test_error_leak_fencing.py  test_error_sanitation.py  test_notfound_guard.py  test_untrusted_content.py  test_untrusted_content_fencing.py
